# clinical-ai-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 033023b7198f_add_jobs_retry_count_and_last_error_.py  35148b2c0ced_add_jobs_status_created_at_index.py  600e12de61a0_add_audit_log_entries_table.py  6751263bc707_initial_schema_documents_extraction_.py  6f19d9b702ee_add_jobs_next_attempt_at_column.py  81a785918b94_add_job_lineage_and_extraction_pipeline_version.py  b05e4fbbd0ca_add_job_id_to_extraction_results_and_.py  e65dfb4b5b26_add_jobs_table.py
apps/api/: dependencies.py  main.py  schemas.py
apps/worker/: main.py
demos/: run_e2e_demo.sh  sample_note.txt
demos/llamaindex_rag/: README.md  run_demo.py
docs/adr/: 0001-modular-monolith-over-microservices.md  0002-interface-first-pipeline-stages.md  0003-alembic-migrations-over-implicit-create-all.md  0004-sqlite-for-tests-postgres-for-runtime.md  0005-paginated-response-envelope-breaking-change-accepted-early.md  0006-non-root-container-fixed-uid-venv-outside-bind-mount.md  0007-ci-validates-docker-build-and-boot.md  0008-lightweight-regex-phi-detection-not-presidio.md  0009-preseed-upload-directory-ownership-in-image.md  0010-real-local-ocr-via-tesseract-fields-stay-synthetic.md  0011-phi-detection-gates-persistence.md  0012-graceful-extraction-failure-handling.md  0013-run-extraction-off-the-event-loop.md  0014-stream-upload-size-enforcement.md  0015-phi-detection-re-evaluation-and-pattern-expansion.md  0016-cap-per-document-ocr-resource-cost.md  0017-reject-unauthenticated-requests-before-body-read.md  0018-evaluated-presidio-not-adopting-yet.md  0019-anthropic-field-extraction-and-phi-gates-llm-call.md  0020-document-and-job-state-machines.md  0021-postgres-backed-job-queue.md  0022-process-api-contract-enqueue-and-return.md  0023-retry-and-backoff-policy-for-processing-jobs.md  0030-evaluation-harness.md  (+15 more)
scripts/: run_backfill.py  run_eval.py  run_reindex.py  run_retrieval_eval.py
tests/: conftest.py
(+132 files in other folders)
