[project]
name = "clinical-ai-platform"
version = "0.3.0"
description = "Production-grade clinical document intelligence platform"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "python-multipart>=0.0.20",
    "alembic>=1.14.0",
    "pytesseract>=0.3.13",
    "pillow>=12.3.0",
    "pypdfium2>=5.11.0",
    "anthropic>=0.69.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true

# Neither library ships type stubs or a py.typed marker; strict mode still
# applies to all first-party code.
[[tool.mypy.overrides]]
module = ["pypdfium2", "pytesseract"]
ignore_missing_imports = true
